# rust-graphql-starter

./: .env  Cargo.toml  README.md
context/: Cargo.toml
context/src/: db.rs  i18n.rs  lib.rs  request_context.rs  server_context.rs
locales/en-US/: main.ftl
schema/: Cargo.toml
schema/src/: lib.rs
schema/src/interfaces/: mod.rs
schema/src/mutation/: create_todo.rs  mod.rs  update_todo_status.rs
schema/src/query/: hello_world.rs  me.rs  mod.rs  todos.rs
schema/src/scalars/: url.rs
schema/src/types/: mod.rs  todo.rs  user.rs
server/: Cargo.toml  build.rs
server/src/: config.rs  graphql.rs  main.rs  telemetry.rs
