[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
context = { path = "../context" }
schema = { path = "../schema" }

async-graphql = { version = "4", features = ["apollo_persisted_queries"] }
async-graphql-extension-apollo-tracing = { version = "3", features = ["compression", "tokio-comp"] }
async-graphql-value = "4"
axum = { version = "0.5", features = [] }
dotenv = "0.15"
lazy_static = "1"
secrecy = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
schema = { path = "../schema" }
